--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>السودان، ملامح المستقبل</h2>
-							<p>د. طارق أحمد خالد</p>
+							<p><a href="author.html">د. طارق أحمد خالد&nbsp;&raquo;</a></p>
 						</div>
 					</section>
 
@@ -79,37 +79,55 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">فوليوبتاس سايت</h2>
+									<h2 class="major">قائمة الموضوعات</h2>
 									<p>أسبيرناتشر أيوت أودايت أيوت فيوجايت, سيد كيواي كونسيكيونتشر ماجناي دولارس أيوس كيواي راتاشن فوليوبتاتيم سيكيواي نيسكايونت. نيكيو بوررو كيوايسكيوم ايست,كيواي دولوريم ايبسيوم كيوا دولار سايت أميت.</p>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">نيومكيوام ايايوس</h3>
+											<h3 class="major">[١] تحويل الشعارات إلى أهداف كمية</h3>
 											<p>لامكوربوريس سيوسكايبيت لابورايوسام, نايساي يوت ألايكيوايد أكس أيا كوموداي كونسيكيواتش.</p>
 											<a href="#" class="special">اعرف المزيد</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">نيومكيوام ايايوس</h3>
+											<h3 class="major">[٢] تحويل الأهداف الكمية إلى حلول واقعية</h3>
 											<p>لامكوربوريس سيوسكايبيت لابورايوسام, نايساي يوت ألايكيوايد أكس أيا كوموداي كونسيكيواتش.</p>
 											<a href="#" class="special">اعرف المزيد</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">نيومكيوام ايايوس</h3>
+											<h3 class="major">[٣] وضع خطط لتطبيق الحلول</h3>
 											<p>لامكوربوريس سيوسكايبيت لابورايوسام, نايساي يوت ألايكيوايد أكس أيا كوموداي كونسيكيواتش.</p>
 											<a href="#" class="special">اعرف المزيد</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">نيومكيوام ايايوس</h3>
+											<h3 class="major">[٤] التنفيذ وما يتبعه من متغيرات</h3>
 											<p>لامكوربوريس سيوسكايبيت لابورايوسام, نايساي يوت ألايكيوايد أكس أيا كوموداي كونسيكيواتش.</p>
 											<a href="#" class="special">اعرف المزيد</a>
 										</article>
 									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">تصفح الكل</a></li>
-									</ul>
+								</div>
+							</section>
+
+							<!-- Five -->
+							<section id="five" class="wrapper spotlight style1">
+								<div class="inner">
+									<section class="features">
+										<h2 class="major">الملاحق</h2>
+										<section class="features">
+											<article>
+												<h3 class="major">[١] الثورة الرشيقة</h3>
+												<p>لامكوربوريس سيوسكايبيت لابورايوسام, نايساي يوت ألايكيوايد أكس أيا كوموداي كونسيكيواتش.</p>
+												<a href="#" class="special">اعرف المزيد</a>
+											</article>
+											<article>
+												<h3 class="major">[٢] محاولة لفهم السياق</h3>
+												<p>لامكوربوريس سيوسكايبيت لابورايوسام, نايساي يوت ألايكيوايد أكس أيا كوموداي كونسيكيواتش.</p>
+												<a href="#" class="special">اعرف المزيد</a>
+											</article>
+										</section>
+									</section>
 								</div>
 							</section>
 
