--- a/problems.html
+++ b/problems.html
@@ -6,7 +6,7 @@
 -->
 <html dir="rtl">
 	<head>
-		<title>السودان، ملامح المستقبل - المقدمة</title>
+		<title>نحن مشاكلنا شنو؟</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link href="https://fonts.googleapis.com/css?family=Tajawal:200,300,400,500,700,800,900&display=swap" rel="stylesheet">
@@ -45,8 +45,8 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>مقدمة</h2>
-								<p>الكتاب ده في الأساس عبارة عن 9 مقالات نشرت في الفيسبوك في الفترة ما بين نوفمبر وديسمبر من عام 2021، سلسلة المقالات دي محاولة فردية ( قدر قدرتي ) للنظر إلى سودان المستقبل حتى تتيسر مسارات التفكير والتخطيط والتنفيذ الجماعي في المستقبل القريب جداً إن شاء الله.</p>
+								<h2>طيب نحن مشكلتنا شنو؟</h2>
+								<p>من خلال النظر لتاريخ الحركة السياسية في السودان، مش بس الحركة السياسية، حتى الحركة الإجتماعية والرياضية والفنية كلها تعاني من أمراض كارثية بتخلي تنفيذ الكلام الفوق دا غاية في الصعوبة ومحتاج عزيمة ما متوفرة في جيلنا نحن لكن أجزم إنها متوفرة في جيل الشباب، ولولا هذا الأمل ما كنت كتبت حرف واحد في المقالات دي.</p>
 							</div>
 						</header>
 
@@ -54,20 +54,24 @@
 							<div class="wrapper">
 								<div class="inner">
 
-									<p>الهدف الأساسي من هذا الكتاب هو التبصير بمجموعة من المنهجيات وأدوات التحليل المهنية الممكن تعين الناس في رسم خارطة سودان المستقبل في الأذهان ثم تطبيقها على أرض الواقع. </p>
-									<p>المنهجيات دي بالتأكيد ما نجرتها من راسي لكن خلاصة تجربة مهنية طويلة كان فيها تقلبات كتيرة ما بين مسارات مهنية مختلفة ( هندسة كهربائية، هندسة برمجيات، إدارة مشروعات، تحليل أعمال، حبة سياسة، كتابة قصص وروايات).</p>
-									<p>الطرطشة والقلق والنطيط دا أداني فرصة لتعلم أدوات ومنهجيات ممكن تكون مطبقة في أغلب المسارات أعلاه لكن ( دي الحتة المهمة ) تختلف طرائق التطبيق حسب اختلاف الأهداف واختلاف السياق. عشان كده بفتكر إنها ممكن تكون مفيدة جداً للناس ( بالتحديد الشباب في مواقعهم المختلفة في درب الثورة ) عشان يقدروا يحولوا الشعارات والأهداف الكيفية (Goals) إلى أهداف كمية (Objectives) ومن ثم تحويل الأهداف الكمية إلى حلول واقعية قابلة للتنفيذ ثم وضع الخطط لتنفيذ هذه الحلول وتحويلها لواقع يؤثر إيجابياً على الناس في تفاصيل حياتهم اليومية.</p>
+									<section class="features">
+										<article>
+											<h2 class="major">ما بنعرف نشتغل في مجموعة</h2>
+											<p>الفردية والأنا المتضخمة واحدة من الآفات الكبيرة حتى على مستوى التفكير. نحن عايزين قائد قائد مؤسس. زعيم يقودنا للخلاص. دكتاتور عادل. لاعب خطير زي ميسي يجب لينا الكاس. حتى لما نشتغل في مجموعة. شركة مثلاً، بعد فترة الشركاء ح يتشاكلوا وكل زول يعمل ليه شركة براهو. الحزب الواحد ممكن يجمع أفراد متسقين فكرياً ينشطر أميبياً لأحزاب تبدأ في التكاثر. النقطة المهمة أنه لو كان الإنشقاق لأسباب فكرية جذرية أكيد مافي مشكلة.</p>
+											<p>لكن أبحث عن "الأنا المتضخمة" الممكن عادي جداً تشق الحزب وفريق الكورة والفرقة والموسيقية والشركة التجارية. نفس الأنا المتضخمة دي هي البتمنع عسكري زي البرهان أنه يقبل رئيسه يكون " ملكي ساكت "، طبعاً هنا الموضوع ما قاصر على البرهان الشخص إنما عقلية مؤسسة كاملة.</p>
+											<p>مشكلة الإفتقار للعمل الجماعي بتخلينا وحتى ونحن في مجموعة بنكون شغالين كأفراد " ملمومين في حتى واحدة " أها المشكلة دي لو ما حليناها حنكون لافين صينية في محلنا. أنا شخصياً لو قلت عندي حل أكون كضاب كل البكتبوا دا تنبيه للمشكلة عشان زي ما قاعدين نقول : " فهم السؤال نصف الإجابة ".</p>
+										</article>
 
-									<p stayle="margin: 0px 0px 0px 0px;">يعني ممكن نختها في شكل سلسلة منطقية عندها مراحل :</p>
-									<ol style="padding-right: 50px;">
-										<li>شعارات ( أهداف كيفية )</li>
-										<li>أهداف كمية</li>
-										<li>حلول واقعية</li>
-										<li>خطط قابلة للتنفيذ</li>
-										<li>تنفيذ الخطط</li>
-										<li>دراسة آثار التنفيذ</li>
-										<li>إجراء التعديلات اللازمة لإصلاح الأخطاء والتعلم من واقع التجربة.</li>
-									</ol>
+										<article>
+											<h2 class="major">قاعدين نحترم العلم</h2>
+											<p>سيت يتبيرسبايكياتيس يوندي أومنيس أستي ناتيس أيررور سيت فوليبتاتيم أكيسأنتييوم دولاريمكيو لايودانتيوم,توتام ريم أبيرأم,أيكيو أبسا كيواي أب أللو أنفينتوري فيرأتاتيس ايت كياسي أرشيتيكتو بيتاي فيتاي ديكاتا سيونت أكسبليكابو.</p>
+										</article>
+
+										<article>
+											<h2 class="major">ده ما وقته!</h2>
+											<p>سيت يتبيرسبايكياتيس يوندي أومنيس أستي ناتيس أيررور سيت فوليبتاتيم أكيسأنتييوم دولاريمكيو لايودانتيوم,توتام ريم أبيرأم,أيكيو أبسا كيواي أب أللو أنفينتوري فيرأتاتيس ايت كياسي أرشيتيكتو بيتاي فيتاي ديكاتا سيونت أكسبليكابو.</p>
+										</article>
+									</section>
 
 								</div>
 							</div>
