--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
 											<article>
 												<h3 class="major">[١] الثورة الرشيقة</h3>
 												<p>لامكوربوريس سيوسكايبيت لابورايوسام, نايساي يوت ألايكيوايد أكس أيا كوموداي كونسيكيواتش.</p>
-												<a href="#" class="special">اعرف المزيد</a>
+												<a href="appendix1.html" class="special">قراءة الملحق</a>
 											</article>
 											<article>
 												<h3 class="major">[٢] محاولة لفهم السياق</h3>
 												<p>لامكوربوريس سيوسكايبيت لابورايوسام, نايساي يوت ألايكيوايد أكس أيا كوموداي كونسيكيواتش.</p>
-												<a href="#" class="special">اعرف المزيد</a>
+												<a href="appendix2.html" class="special">قراءة الملحق</a>
 											</article>
 										</section>
 									</section>
