--- a/author.html
+++ b/author.html
@@ -20,32 +20,17 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">متين</a></h1>
 						<nav>
-							<a href="#menu">القائمة</a>
+							<a href="index.html"><h2>&nbsp;&seArr;العودة</h2></a>
 						</nav>
 					</header>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>القائمة</h2>
-							<ul class="links">
-								<li><a href="index.html">الرئيسية</a></li>
-								<li><a href="generic.html">عام</a></li>
-								<li><a href="elements.html">العناصر</a></li>
-								<li><a href="#">تسجيل دخول</a></li>
-								<li><a href="#">انشاء حساب</a></li>
-							</ul>
-							<a href="#" class="close">اغلاق</a>
-						</div>
-					</nav>
 				<!-- Wrapper -->
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>عام</h2>
-								<p>أيكسسيبتيور ساينت أوككايكات كيوبايداتات نون بروايدينت.</p>
+								<h2>د. طارق أحمد خالد</h2>
+								<p>إستشاري هندسة البرمجيات وتحليل الأعمال والبيانات.</p>
 							</div>
 						</header>
 
@@ -53,30 +38,8 @@
 							<div class="wrapper">
 								<div class="inner">
 
-									<h3 class="major">لوريم ايبسوم دولار</h3>
-									<p>Photo by <a href="https://unsplash.com/@phoziz?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Abdulaziz Mohammed</a> on <a href="https://unsplash.com/s/photos/sudan?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-									</p>
-
-									<p>سيت يتبيرسبايكياتيس يوندي أومنيس أستي ناتيس أيررور سيت فوليبتاتيم أكيسأنتييوم دولاريمكيو لايودانتيوم,توتام ريم أبيرأم,أيكيو أبسا كيواي أب أللو أنفينتوري فيرأتاتيس ايت كياسي أرشيتيكتو بيتاي فيتاي ديكاتا سيونت أكسبليكابو. نيمو أنيم أبسام فوليوباتاتيم كيواي فوليوبتاس سايت أسبيرناتشر أيوت أودايت أيوت فيوجايت, سيد كيواي كونسيكيونتشر ماجناي دولارس أيوس كيواي راتاشن فوليوبتاتيم سيكيواي نيسكايونت. نيكيو بوررو كيوايسكيوم.</p>
-
-									<h3 class="major">ايبسيوم كيوا</h3>
-									<p>سيت يتبيرسبايكياتيس يوندي أومنيس أستي ناتيس أيررور سيت فوليبتاتيم أكيسأنتييوم دولاريمكيو لايودانتيوم,توتام ريم أبيرأم,أيكيو أبسا كيواي أب أللو أنفينتوري فيرأتاتيس ايت كياسي أرشيتيكتو بيتاي.</p>
-
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-										<h2 class="major">كيو أوفيسيا</h2>
-										<p>سيت يتبيرسبايكياتيس يوندي أومنيس أستي ناتيس أيررور سيت فوليبتاتيم أكيسأنتييوم دولاريمكيو لايودانتيوم,توتام ريم أبيرأم,أيكيو أبسا كيواي أب أللو أنفينتوري فيرأتاتيس ايت كياسي أرشيتيكتو بيتاي فيتاي ديكاتا سيونت أكسبليكابو.</p>
-										<a href="#" class="special">اعرف المزيد</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-										<h2 class="major">كيو أوفيسيا</h2>
-										<p>سيت يتبيرسبايكياتيس يوندي أومنيس أستي ناتيس أيررور سيت فوليبتاتيم أكيسأنتييوم دولاريمكيو لايودانتيوم,توتام ريم أبيرأم,أيكيو أبسا كيواي أب أللو أنفينتوري فيرأتاتيس ايت كياسي أرشيتيكتو بيتاي فيتاي ديكاتا سيونت أكسبليكابو.</p>
-										<a href="#" class="special">اعرف المزيد</a>
-										</article>
-									</section>
-
+									<h3 class="major">السيرة الحياتية</h3>
+									<p>درس الهندسة الكهربائية بكلية الهندسة جامعة الخرطوم، ثم تحول لاحقًا بعد إكمال الماجستير إلى تقنية المعلومات التي ينجز فيها رسالة الدكتوراة. يعمل كمهندس برمجيات ومدير مشروعات معتمد، وأستاذ جامعي. يحمل العديد من الزمالات المهنية في إدارة المشروعات وتقنية المعلومات كما شارك في مراجعة معايير هندسة البرمجيات الصادرة من معهد مهندسي الكهرباء والإلكترونيات في الولايات المتحدة الذي يحمل عضويته. دخل متأخرا لعالم الكتابة السردية حين شارك بروايته الأولى “الظمآن والسراب” في مسابقة الطيب صالح للإبداع الروائي للعام 2011 لتنال الرواية الجائزة التقديرية. نشر عددًا من القصص القصيرة بمجلة (المحلاج). تتوزع أنشطته ما بين عوالم تقنية المعلومات، وإدارة المشروعات، والرواية.</p>
 								</div>
 							</div>
 
@@ -85,40 +48,12 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">ابقى على تواصل</h2>
+							<h2 class="major">عناوين التواصل</h2>
 							<p>سيت يتبيرسبايكياتيس يوندي أومنيس أستي ناتيس أيررور سيت فوليبتاتيم أكيسأنتييوم دولاريمكيو لايودانتيوم,توتام ريم أبيرأم,أيكيو أبسا كيواي أب أللو أنفينتوري فيرأتاتيس ايت كياسي أرشيتيكتو بيتاي فيتاي ديكاتا سيونت أكسبليكابو.</p>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">الاسم</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">الإيميل</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">الرسالة</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="أرسل الرسالة" /></li>
-								</ul>
-							</form>
 							<ul class="contact">
-								<li class="icon solid fa-home">
-									1234 شارع مكة<br />
-									الأردن
-								</li>
 								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
 								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
 								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; كل الحقوق محفوظة </li><li> تصميم: <a href="https://arathemes.com/"> أراثيمز</a></li>
 							</ul>
 						</div>
 					</section>
