--- a/index.html
+++ b/index.html
@@ -18,34 +18,17 @@
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<nav>
-							<a href="#menu">القائمة</a>
-						</nav>
-					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>القائمة</h2>
-							<ul class="links">
-								<li><a href="index.html">الرئيسية</a></li>
-								<li><a href="generic.html">عام</a></li>
-								<li><a href="#">العناصر</a></li>
-								<li><a href="#">تسجيل دخول</a></li>
-								<li><a href="#">انشاء حساب</a></li>
-							</ul>
-							<a href="#" class="close">اغلاق</a>
-						</div>
-					</nav>
-
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>السودان، ملامح المستقبل</h2>
-							<p><a href="author.html">د. طارق أحمد خالد&nbsp;&raquo;</a></p>
+							<img src="svg/sd.svg" alt="" style="max-width: calc(50%);"/>
+							<div class="content">
+								<h2 class="major">السودان، ملامح المستقبل</h2>
+								<p>
+									<a href="author.html">د. طارق أحمد خالد&nbsp;&raquo;</a><br>
+									<span>إستشاري هندسة البرمجيات وتحليل الأعمال والبيانات.</span>
+								</p>
+							</div>
 						</div>
 					</section>
 
@@ -80,31 +63,30 @@
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">قائمة الموضوعات</h2>
-									<p>أسبيرناتشر أيوت أودايت أيوت فيوجايت, سيد كيواي كونسيكيونتشر ماجناي دولارس أيوس كيواي راتاشن فوليوبتاتيم سيكيواي نيسكايونت. نيكيو بوررو كيوايسكيوم ايست,كيواي دولوريم ايبسيوم كيوا دولار سايت أميت.</p>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">[١] تحويل الشعارات إلى أهداف كمية</h3>
-											<p>لامكوربوريس سيوسكايبيت لابورايوسام, نايساي يوت ألايكيوايد أكس أيا كوموداي كونسيكيواتش.</p>
-											<a href="#" class="special">اعرف المزيد</a>
+											<p>هل مهم يكون عندنا شعارات؟ ولا الشعارات دي حنك فاضي؟ والشعارات دي بتجي من وين؟ وبيضعها منو؟ وهل الشعارات ثابتة؟</p>
+											<a href="articles/article_1.html" class="special">مواصلة القراءة</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">[٢] تحويل الأهداف الكمية إلى حلول واقعية</h3>
 											<p>لامكوربوريس سيوسكايبيت لابورايوسام, نايساي يوت ألايكيوايد أكس أيا كوموداي كونسيكيواتش.</p>
-											<a href="#" class="special">اعرف المزيد</a>
+											<a href="articles/article_2.html" class="special">مواصلة القراءة</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
 											<h3 class="major">[٣] وضع خطط لتطبيق الحلول</h3>
 											<p>لامكوربوريس سيوسكايبيت لابورايوسام, نايساي يوت ألايكيوايد أكس أيا كوموداي كونسيكيواتش.</p>
-											<a href="#" class="special">اعرف المزيد</a>
+											<a href="articles/article_3.html" class="special">مواصلة القراءة</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<h3 class="major">[٤] التنفيذ وما يتبعه من متغيرات</h3>
 											<p>لامكوربوريس سيوسكايبيت لابورايوسام, نايساي يوت ألايكيوايد أكس أيا كوموداي كونسيكيواتش.</p>
-											<a href="#" class="special">اعرف المزيد</a>
+											<a href="articles/article_4.html" class="special">مواصلة القراءة</a>
 										</article>
 									</section>
 								</div>
@@ -119,12 +101,12 @@
 											<article>
 												<h3 class="major">[١] الثورة الرشيقة</h3>
 												<p>لامكوربوريس سيوسكايبيت لابورايوسام, نايساي يوت ألايكيوايد أكس أيا كوموداي كونسيكيواتش.</p>
-												<a href="appendix1.html" class="special">قراءة الملحق</a>
+												<a href="appendices/appendix1_.html" class="special">قراءة الملحق</a>
 											</article>
 											<article>
 												<h3 class="major">[٢] محاولة لفهم السياق</h3>
 												<p>لامكوربوريس سيوسكايبيت لابورايوسام, نايساي يوت ألايكيوايد أكس أيا كوموداي كونسيكيواتش.</p>
-												<a href="appendix2.html" class="special">قراءة الملحق</a>
+												<a href="appendices/appendix2_.html" class="special">قراءة الملحق</a>
 											</article>
 										</section>
 									</section>
