--- a/problems.html
+++ b/problems.html
@@ -19,27 +19,11 @@
 			<div id="page-wrapper">
 
 				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">متين</a></h1>
-						<nav>
-							<a href="#menu">القائمة</a>
-						</nav>
-					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>القائمة</h2>
-							<ul class="links">
-								<li><a href="index.html">الرئيسية</a></li>
-								<li><a href="generic.html">عام</a></li>
-								<li><a href="elements.html">العناصر</a></li>
-								<li><a href="#">تسجيل دخول</a></li>
-								<li><a href="#">انشاء حساب</a></li>
-							</ul>
-							<a href="#" class="close">اغلاق</a>
-						</div>
+				<header id="header" class="alt">
+					<nav>
+						<a href="index.html"><h2>&nbsp;&seArr;العودة</h2></a>
 					</nav>
+				</header>
 					
 				<!-- Wrapper -->
 					<section id="wrapper">
